[gd_scene load_steps=16 format=3 uid="uid://dlulit1u8l53v"]

[ext_resource type="Script" path="res://Assets/UI/Scripts/RC_PauseUI.gd" id="1_6k80b"]
[ext_resource type="FontFile" uid="uid://dmr10v1c54tq4" path="res://Assets/Fonts/Nihonium113.ttf" id="2_d72ia"]
[ext_resource type="Script" path="res://Assets/UI/Scripts/RC_Settings.gd" id="3_otuas"]
[ext_resource type="Theme" uid="uid://ckeyukbkgh472" path="res://Assets/UI/Themes/rc_theme_volumeButton.tres" id="4_efhtu"]
[ext_resource type="Texture2D" uid="uid://batwh5sgr6h78" path="res://Assets/UI/Sprites/RC_Music-On.png" id="5_tmls7"]
[ext_resource type="Texture2D" uid="uid://cvehnyhi4v7gu" path="res://Assets/UI/Sprites/RC_ButtonHighlight.png" id="6_xtqov"]
[ext_resource type="Texture2D" uid="uid://cgtfma3sf84af" path="res://Assets/UI/Sprites/RC_SFX-On.png" id="7_dh7qk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3qkuw"]
bg_color = Color(0.988235, 0.956863, 0, 0.54902)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.988235, 0.956863, 0, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ttmxr"]
bg_color = Color(0.243137, 0.243137, 0.243137, 0.745098)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.243137, 0.243137, 0.243137, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qorl0"]
bg_color = Color(0, 0, 0, 0.745098)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.505882, 0.505882, 0.505882, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="Theme" id="Theme_t5try"]
Button/colors/font_color = Color(0.875, 0.875, 0.875, 1)
Button/colors/font_hover_color = Color(0.95, 0.95, 0.95, 1)
Button/colors/font_pressed_color = Color(0.505882, 0.505882, 0.505882, 1)
Button/fonts/font = ExtResource("2_d72ia")
Button/styles/hover = SubResource("StyleBoxFlat_3qkuw")
Button/styles/normal = SubResource("StyleBoxFlat_ttmxr")
Button/styles/pressed = SubResource("StyleBoxFlat_qorl0")
Label/fonts/font = ExtResource("2_d72ia")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8plnp"]
bg_color = Color(0.988235, 0.956863, 0, 0.627451)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.988235, 0.956863, 0, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c3pye"]
bg_color = Color(0.243137, 0.243137, 0.243137, 0.784314)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.243137, 0.243137, 0.243137, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s2n1w"]
bg_color = Color(0, 0, 0, 0.745098)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.505882, 0.505882, 0.505882, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="Theme" id="Theme_7571v"]
Button/colors/font_color = Color(0.875, 0.875, 0.875, 1)
Button/colors/font_hover_color = Color(0.95, 0.95, 0.95, 1)
Button/colors/font_pressed_color = Color(0.505882, 0.505882, 0.505882, 1)
Button/fonts/font = ExtResource("2_d72ia")
Button/styles/hover = SubResource("StyleBoxFlat_8plnp")
Button/styles/normal = SubResource("StyleBoxFlat_c3pye")
Button/styles/pressed = SubResource("StyleBoxFlat_s2n1w")
Label/fonts/font = ExtResource("2_d72ia")

[node name="PauseScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6k80b")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 214.0
offset_right = 854.0
offset_bottom = 480.0
color = Color(1, 1, 1, 0.470588)

[node name="MainContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 214.0
offset_right = 854.0
offset_bottom = 480.0
theme_override_constants/separation = 24
alignment = 1

[node name="PauseText" type="Label" parent="MainContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("2_d72ia")
theme_override_font_sizes/font_size = 48
text = "PAUSED"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Separator" type="Control" parent="MainContainer"]
layout_mode = 2

[node name="ContinueButton" type="Button" parent="MainContainer"]
custom_minimum_size = Vector2(168, 32)
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
theme = SubResource("Theme_t5try")
theme_override_font_sizes/font_size = 24
text = "CONTINUE"

[node name="MainMenuButton" type="Button" parent="MainContainer"]
custom_minimum_size = Vector2(168, 32)
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
theme = SubResource("Theme_t5try")
theme_override_font_sizes/font_size = 24
text = "MAIN MENU"

[node name="QuitButton" type="Button" parent="MainContainer"]
custom_minimum_size = Vector2(168, 32)
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
theme = SubResource("Theme_t5try")
theme_override_font_sizes/font_size = 24
text = "QUIT GAME"

[node name="Settings" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(134, 0)
layout_mode = 0
offset_left = 700.0
offset_top = 328.0
offset_right = 834.0
offset_bottom = 462.0
theme_override_constants/separation = 8
alignment = 2
script = ExtResource("3_otuas")

[node name="VolumeAdjust" type="Panel" parent="Settings"]
visible = false
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="AdjustmentContainer" type="HBoxContainer" parent="Settings/VolumeAdjust"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 5
alignment = 1

[node name="Adjustment0" type="ColorRect" parent="Settings/VolumeAdjust/AdjustmentContainer"]
custom_minimum_size = Vector2(16, 0)
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="Button" type="Button" parent="Settings/VolumeAdjust/AdjustmentContainer/Adjustment0"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
theme = ExtResource("4_efhtu")
theme_override_font_sizes/font_size = 24

[node name="Adjustment1" type="ColorRect" parent="Settings/VolumeAdjust/AdjustmentContainer"]
custom_minimum_size = Vector2(16, 0)
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="Button" type="Button" parent="Settings/VolumeAdjust/AdjustmentContainer/Adjustment1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
theme = ExtResource("4_efhtu")
theme_override_font_sizes/font_size = 24

[node name="Adjustment2" type="ColorRect" parent="Settings/VolumeAdjust/AdjustmentContainer"]
custom_minimum_size = Vector2(16, 0)
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="Button" type="Button" parent="Settings/VolumeAdjust/AdjustmentContainer/Adjustment2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
theme = ExtResource("4_efhtu")
theme_override_font_sizes/font_size = 24

[node name="Adjustment3" type="ColorRect" parent="Settings/VolumeAdjust/AdjustmentContainer"]
custom_minimum_size = Vector2(16, 0)
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="Button" type="Button" parent="Settings/VolumeAdjust/AdjustmentContainer/Adjustment3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
theme = ExtResource("4_efhtu")
theme_override_font_sizes/font_size = 24

[node name="Adjustment4" type="ColorRect" parent="Settings/VolumeAdjust/AdjustmentContainer"]
custom_minimum_size = Vector2(16, 0)
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="Button" type="Button" parent="Settings/VolumeAdjust/AdjustmentContainer/Adjustment4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
theme = ExtResource("4_efhtu")
theme_override_font_sizes/font_size = 24

[node name="Adjustment5" type="ColorRect" parent="Settings/VolumeAdjust/AdjustmentContainer"]
custom_minimum_size = Vector2(16, 0)
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="Button" type="Button" parent="Settings/VolumeAdjust/AdjustmentContainer/Adjustment5"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
theme = ExtResource("4_efhtu")
theme_override_font_sizes/font_size = 24

[node name="BusContainer" type="HBoxContainer" parent="Settings"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
theme_override_constants/separation = 8
alignment = 2

[node name="MusicButton" type="Button" parent="Settings/BusContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
focus_mode = 0
theme = SubResource("Theme_7571v")
theme_override_font_sizes/font_size = 24
icon = ExtResource("5_tmls7")
expand_icon = true

[node name="Highlight" type="TextureRect" parent="Settings/BusContainer/MusicButton"]
visible = false
layout_mode = 0
offset_left = -5.0
offset_top = -5.0
offset_right = 37.0
offset_bottom = 37.0
texture = ExtResource("6_xtqov")

[node name="SFXButton" type="Button" parent="Settings/BusContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
focus_mode = 0
theme = SubResource("Theme_7571v")
theme_override_font_sizes/font_size = 24
icon = ExtResource("7_dh7qk")
expand_icon = true

[node name="Highlight" type="TextureRect" parent="Settings/BusContainer/SFXButton"]
visible = false
layout_mode = 0
offset_left = -5.0
offset_top = -5.0
offset_right = 37.0
offset_bottom = 37.0
texture = ExtResource("6_xtqov")

[node name="FullScreenButton" type="Button" parent="Settings"]
custom_minimum_size = Vector2(134, 54)
layout_mode = 2
focus_mode = 0
theme = SubResource("Theme_7571v")
theme_override_font_sizes/font_size = 24
text = "Fullscreen
(F11)"
